# goit-pyweb-hw11-fastapi

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  scrypts.txt
alembic/: env.py
alembic/versions/: 0daf144e157b_update_contacts_model.py  3b55a27b6e21_change_contacts_model.py  8de9ac39085c_update_contacts_model.py  b362196b6d64_add_username_to_users.py  e82e1ce7166d_autoincrement_contact_id.py
contact_api/: pyproject.toml
contact_api/contact_api/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: config.py  schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: example_email.html
src/tests/: conftest.py  pytest_route_contacts.py  test_unit_repo_users.py  test_unit_repository_contacts.py
